--- a/Index.html
+++ b/Index.html
@@ -73,6 +73,19 @@ integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4
             </div>
         </div>
     </section>
+    <section class="contact">
+        <div class="container">
+            <form class="contact__form">
+                <h2>DROP ME A LINE</h2>
+                <p>No one lights a lamp in order to hide it behind the door: the purpose of light is to create more light, to open people’s eyes, to reveal the marvels around.
+                </p>
+                <input type="text" class="contact__input" placeholder="Name">
+                <input type="text" class="contact__input" placeholder="E-mail">
+                <textarea name="Message" placeholder="Message" class="contact__textarea" id="" cols="30" rows="10"></textarea>
+                <button class="contact__btn" type="submit">SEND MESSAGE</button>
+            </form>
+        </div>
+    </section>
     <footer class="footer">
         <div class="social">
             <ul class="social__links">
