added contact end

--- a/Index.html
+++ b/Index.html
@@ -76,13 +76,17 @@ integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4
     <section class="contact">
         <div class="container">
             <form class="contact__form">
-                <h2>DROP ME A LINE</h2>
-                <p>No one lights a lamp in order to hide it behind the door: the purpose of light is to create more light, to open people’s eyes, to reveal the marvels around.
-                </p>
-                <input type="text" class="contact__input" placeholder="Name">
-                <input type="text" class="contact__input" placeholder="E-mail">
-                <textarea name="Message" placeholder="Message" class="contact__textarea" id="" cols="30" rows="10"></textarea>
-                <button class="contact__btn" type="submit">SEND MESSAGE</button>
+                <div class="contact__container">
+                    <h2 class="contact__title">DROP ME A LINE</h2>
+                    <div class="contact__line"></div>
+                    <!-- <div class="contact__subtitle">
+                        "No one lights a lamp in order to hide it behind the door: the purpose of light is to create more light, to open people’s eyes, to reveal the marvels around."
+                    </div> -->
+                    <input type="text" class="contact__input" placeholder="Name">
+                    <input type="text" class="contact__input" placeholder="E-mail">
+                    <textarea name="Message" placeholder="Message" class="contact__textarea" id="" cols="30" rows="10"></textarea>
+                    <button class="contact__btn" type="submit">SEND MESSAGE</button>
+                </div>
             </form>
         </div>
     </section>
