--- a/Index.html
+++ b/Index.html
@@ -1,29 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Web Cifar</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
-    integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
-  <link rel="stylesheet" href="/css/style.css">
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
+  <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
   <!-- nav-bar  -->
   <section id="nav-bar" class="container">
     <header class="nav-bar">
-      <div class="brand"><a href="#hero">
-          <h1>Web Cifar</h1>
-        </a></div>
+      <div class="logo"><a href="#hero"><h1>MaZuR</h1></a></div>
       <div class="nav-list">
         <div class="hamburger">
           <div class="bar"></div>
         </div>
         <ul>
           <li><a href="#about">About</a></li>
-          <li><a href="#services">services</a></li>
+          <li><a href="#Projects">Projects</a></li>
           <li><a href="#hire">Hire Me</a></li>
         </ul>
       </div>
@@ -34,89 +29,78 @@
   <!-- Hero Section  -->
   <section id="hero" class="hero container">
     <div class="hero-info">
-      <h1 class="hero-info-heading">I Design <br>Your Dream</h1>
-      <p class="hero-info-subheading">I am a web designer</p>
-      <a href="#" type="button" class="hero-info-button">Portfolio</a>
+      <h1>I'm FrontEnd <br>Developer</h1>
+      <p>Hi, I'm a Front-End developer from Belarus. I can create projects with HTML5, CSS3,
+      JavaScript, React.js.</p>
+      <a href="img/resume.pdf" type="button" class="hero-info-button">Resume</a>
     </div>
     <div class="hero-img">
-      <img src="./images/img-1.jpg" alt="">
+      <img src="img/img-4.jpg" alt="">
     </div>
   </section>
   <!-- End Hero Section  -->
 
   <!-- About section  -->
-  <section id="about" class="about container">
+  <!-- <section id="about" class="about container">
     <div class="about-info">
       <h1 class="about-info-heading">About Me</h1>
-      <p class="about-info-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi suscipit quidem
-        ullam voluptates repellendus explicabo placeat, expedita ratione saepe eaque dolorum sed deleniti, odit numquam,
-        nostrum tempore quos corrupti rem.</p>
+      <p class="about-info-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi suscipit quidem ullam voluptates repellendus explicabo placeat, expedita ratione saepe eaque dolorum sed deleniti, odit numquam, nostrum tempore quos corrupti rem.</p>
       <a href="#" type="button" class="about-info-button">Download Resume</a>
     </div>
     <div class="about-img">
       <div class="about-img-wrapper">
-        <img src="./images/img-2.jpg" alt="">
+        <img src="img/img-2.jpg" alt="">
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- End About section  -->
 
-  <!-- Service Section  -->
-  <section id="services" class="services container">
-    <div class="services-header">
-      <h1 class="services-header-heading">services</h1>
-      <p class="services-header-desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni temporibus, omnis
-        illum ipsa reiciendis illo eos odio possimus voluptatibus architecto.</p>
+  <!-- Project Section  -->
+  <section id="Projects" class="Projects container">
+    <div class="Projects-header">
+      <h1>Projects</h1>
+      <p >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni temporibus, omnis illum ipsa reiciendis illo eos odio possimus voluptatibus architecto.</p>
     </div>
-    <div class="services-info">
-      <div class="service">
-        <div class="service-card">
-          <div class="service-front">
-            <i class="fa fa-palette"></i>
-            <h1 class="service-front-heading">Web Design</h1>
+    <div class="Projects-info">
+      <div class="Project">
+        <div class="Project-card">
+          <div class="Project-front">
+            <i class="fab fa-react"></i>
+            <h1>React</h1>
           </div>
-          <div class="service-back">
-            <h1 class="service-back-heading">Web Design</h1>
-            <p class="service-back-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum aut dolor
-              voluptatem incidunt placeat impedit laboriosam quam consequatur quasi nihil libero ad, quaerat, alias
-              illum excepturi. Iste quo repellendus consequuntur asperiores dignissimos, quaerat obcaecati officiis
-              repudiandae fugit tenetur nulla impedit!</p>
+          <div class="Project-back">
+            <h1>React</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum aut dolor voluptatem incidunt placeat impedit laboriosam quam consequatur quasi nihil libero ad, quaerat, alias illum excepturi. Iste quo repellendus consequuntur asperiores dignissimos, quaerat obcaecati officiis repudiandae fugit tenetur nulla impedit!</p>
           </div>
         </div>
       </div>
-      <div class="service">
-        <div class="service-card">
-          <div class="service-front">
-            <i class="fa fa-laptop-code"></i>
-            <h1 class="service-front-heading">Font End Dev</h1>
+      <div class="Project">
+        <div class="Project-card">
+          <div class="Project-front">
+            <i class="fab fa-js-square"></i>
+            <h1>JavaScript</h1>
           </div>
-          <div class="service-back">
-            <h1 class="service-back-heading">Front End Dev</h1>
-            <p class="service-back-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum aut dolor
-              voluptatem incidunt placeat impedit laboriosam quam consequatur quasi nihil libero ad, quaerat, alias
-              illum excepturi. Iste quo repellendus consequuntur asperiores dignissimos, quaerat obcaecati officiis
-              repudiandae fugit tenetur nulla impedit!</p>
+          <div class="Project-back">
+            <h1>JavaScript</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum aut dolor voluptatem incidunt placeat impedit laboriosam quam consequatur quasi nihil libero ad, quaerat, alias illum excepturi. Iste quo repellendus consequuntur asperiores dignissimos, quaerat obcaecati officiis repudiandae fugit tenetur nulla impedit!</p>
           </div>
         </div>
       </div>
-      <div class="service">
-        <div class="service-card">
-          <div class="service-front">
-            <i class="fa fa-building"></i>
-            <h1 class="service-front-heading">Branding</h1>
+      <div class="Project">
+        <div class="Project-card">
+          <div class="Project-front">
+            <i class="fab fa-sass"></i>
+            <h1 class="Project-front-heading">SCSS</h1>
           </div>
-          <div class="service-back">
-            <h1 class="service-back-heading">Branding</h1>
-            <p class="service-back-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum aut dolor
-              voluptatem incidunt placeat impedit laboriosam quam consequatur quasi nihil libero ad, quaerat, alias
-              illum excepturi. Iste quo repellendus consequuntur asperiores dignissimos, quaerat obcaecati officiis
-              repudiandae fugit tenetur nulla impedit!</p>
+          <div class="Project-back">
+            <h1 class="Project-back-heading">SCSS</h1>
+            <p class="Project-back-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum aut dolor voluptatem incidunt placeat impedit laboriosam quam consequatur quasi nihil libero ad, quaerat, alias illum excepturi. Iste quo repellendus consequuntur asperiores dignissimos, quaerat obcaecati officiis repudiandae fugit tenetur nulla impedit!</p>
           </div>
         </div>
       </div>
     </div>
   </section>
-  <!-- End Service Section  -->
+  <!-- End Project Section  -->
 
   <!-- Hire Section  -->
   <section id="hire" class="hire container">
@@ -128,22 +112,21 @@
   <!-- Footer section  -->
   <footer id="footer" class="footer container">
     <div class="footer-contact">
-      <h1 class="footer-contact-heading">Contact With Me</h1>
-      <p class="footer-contact-info">Email: yourname@gamil.com</p>
+      <h1>Contact With Me</h1>
+      <p class="footer-contact-info">Email: Art.Tikhonenko@gmail.com</p>
       <p class="footer-contact-info">Mobile: 234 234 2342</p>
     </div>
     <div class="footer-social-follow">
-      <h1 class="footer-social-follow-heading">Follow Me</h1>
+      <h1>Follow Me</h1>
       <div class="footer-social-icon">
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-instagram-square"></i></a>
-        <a href="#"><i class="fab fa-behance-square"></i></a>
-        <a href="#"><i class="fab fa-dribbble-square"></i></a>
+        <a href="https://www.facebook.com/artem.tikhonenko.9/"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.instagram.com/art_tikhonenko/"><i class="fab fa-instagram-square"></i></a>
+        <a href="https://www.linkedin.com/in/artem-tikhonenko-536a79b9/"><i class="fab fa-linkedin"></i></i></a>
+        <a href="https://github.com/Art-Ti"><i class="fab fa-github-square"></i></a>
       </div>
     </div>
   </footer>
   <!-- End Footer section  -->
   <script src="js/app.js"></script>
 </body>
-
 </html>
