--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
   <!-- nav-bar  -->
   <section id="nav-bar" class="container">
     <header class="nav-bar">
-      <div class="logo"><a href="#hero"><h1>MaZuR</h1></a></div>
+      <div class="logo"><a href="#hero"><h1>Artem Tikhonenko</h1></a></div>
       <div class="nav-list">
         <div class="hamburger">
           <div class="bar"></div>
@@ -19,7 +19,7 @@
         <ul>
           <li><a href="#about">About</a></li>
           <li><a href="#Projects">Projects</a></li>
-          <li><a href="#hire">Hire Me</a></li>
+          <li><a href="#skills">Skills</a></li>
         </ul>
       </div>
     </header>
@@ -29,7 +29,7 @@
   <!-- Hero Section  -->
   <section id="hero" class="hero container">
     <div class="hero-info">
-      <h1>I'm FrontEnd <br>Developer</h1>
+      <h1>I'm <br> FrontEnd <br>Developer</h1>
       <p>Hi, I'm a Front-End developer from Belarus. I can create projects with HTML5, CSS3,
       JavaScript, React.js.</p>
       <a href="img/resume.pdf" type="button" class="hero-info-button">Resume</a>
@@ -39,21 +39,6 @@
     </div>
   </section>
   <!-- End Hero Section  -->
-
-  <!-- About section  -->
-  <!-- <section id="about" class="about container">
-    <div class="about-info">
-      <h1 class="about-info-heading">About Me</h1>
-      <p class="about-info-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi suscipit quidem ullam voluptates repellendus explicabo placeat, expedita ratione saepe eaque dolorum sed deleniti, odit numquam, nostrum tempore quos corrupti rem.</p>
-      <a href="#" type="button" class="about-info-button">Download Resume</a>
-    </div>
-    <div class="about-img">
-      <div class="about-img-wrapper">
-        <img src="img/img-2.jpg" alt="">
-      </div>
-    </div>
-  </section> -->
-  <!-- End About section  -->
 
   <!-- Project Section  -->
   <section id="Projects" class="Projects container">
@@ -90,11 +75,11 @@
         <div class="Project-card">
           <div class="Project-front">
             <i class="fab fa-sass"></i>
-            <h1 class="Project-front-heading">SCSS</h1>
+            <h1>SCSS</h1>
           </div>
           <div class="Project-back">
-            <h1 class="Project-back-heading">SCSS</h1>
-            <p class="Project-back-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum aut dolor voluptatem incidunt placeat impedit laboriosam quam consequatur quasi nihil libero ad, quaerat, alias illum excepturi. Iste quo repellendus consequuntur asperiores dignissimos, quaerat obcaecati officiis repudiandae fugit tenetur nulla impedit!</p>
+            <h1>SCSS</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum aut dolor voluptatem incidunt placeat impedit laboriosam quam consequatur quasi nihil libero ad, quaerat, alias illum excepturi. Iste quo repellendus consequuntur asperiores dignissimos, quaerat obcaecati officiis repudiandae fugit tenetur nulla impedit!</p>
           </div>
         </div>
       </div>
@@ -102,12 +87,31 @@
   </section>
   <!-- End Project Section  -->
 
-  <!-- Hire Section  -->
-  <section id="hire" class="hire container">
-    <h1 class="hire-heading">Hire me to build your dream website</h1>
-    <a href="#" type="button" class="hire-button">Hire Me !!</a>
+  <!-- Skills Section -->
+  <section id="skills" class="skills container">
+    <h1>skills</h1>
+
+    <h3>HTML</h3>
+    <div class="skills-container">
+      <div class="skill skills-html"></div>
+    </div>
+
+    <h3>CSS</h3>
+    <div class="skills-container">
+      <div class="skill skills-css"></div>
+    </div>
+
+    <h3>JavaScript</h3> 
+    <div class="skills-container">
+      <div class="skill skills-js"></div>
+    </div>
+
+    <h3>React</h3>
+    <div class="skills-container">
+      <div class="skill skills-React"></div>
+    </div>
   </section>
-  <!-- End Hire Section  -->
+  <!-- End Skills Section -->
 
   <!-- Footer section  -->
   <footer id="footer" class="footer container">
