--- a/Index.html
+++ b/Index.html
@@ -89,26 +89,28 @@
 
   <!-- Skills Section -->
   <section id="skills" class="skills container">
-    <h1>skills</h1>
+    <div class="skills-korobka">
+      <h1>skills</h1>
 
-    <h3>HTML</h3>
-    <div class="skills-container">
-      <div class="skill skills-html"></div>
-    </div>
+      <h3>HTML</h3>
+      <div class="skills-container">
+        <div class="skill skills-html"></div>
+      </div>
 
-    <h3>CSS</h3>
-    <div class="skills-container">
-      <div class="skill skills-css"></div>
-    </div>
+      <h3>CSS</h3>
+      <div class="skills-container">
+        <div class="skill skills-css"></div>
+      </div>
 
-    <h3>JavaScript</h3> 
-    <div class="skills-container">
-      <div class="skill skills-js"></div>
-    </div>
+      <h3>JavaScript</h3> 
+      <div class="skills-container">
+        <div class="skill skills-js"></div>
+      </div>
 
-    <h3>React</h3>
-    <div class="skills-container">
-      <div class="skill skills-React"></div>
+      <h3>React</h3>
+      <div class="skills-container">
+        <div class="skill skills-React"></div>
+      </div>
     </div>
   </section>
   <!-- End Skills Section -->
